force-app/main/default/objects/FNS_Pricing__c/FNS_Pricing__c.object-meta.xml
<CustomObject>
    <label>Pricing</label>
    <nameField>
        <label>Pricing Name</label>
 	<displayFormat>PN -{0000}</displayFormat>     
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pricings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>