force-app/main/default/objects/FNS_Pricing__c/fields/FNS_AllInRate__c.field-meta.xml
<CustomField>
    <fullName>FNS_AllInRate__c</fullName>
    <label>All In Rate</label>
    <precision>14</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>