force-app/main/default/objects/FNS_Pricing__c/fields/FNS_BaseRate__c.field-meta.xml
<CustomField>
    <fullName>FNS_BaseRate__c</fullName>
    <label>Base Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>