force-app/main/default/objects/FNS_Pricing__c/fields/FNS_CalcType__c.field-meta.xml
<CustomField>
    <fullName>FNS_CalcType__c</fullName>
    <label>Calculation Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>