force-app/main/default/objects/FNS_Pricing__c/fields/FNS_Discount1__c.field-meta.xml
<CustomField>
    <fullName>FNS_Discount1__c</fullName>
    <label>Discount #1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>