force-app/main/default/objects/FNS_Pricing__c/fields/FNS_Discount2__c.field-meta.xml
<CustomField>
    <fullName>FNS_Discount2__c</fullName>
    <label>Discount #2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>