force-app/main/default/objects/FNS_Pricing__c/fields/FNS_FinalRate__c.field-meta.xml
<CustomField>
    <fullName>FNS_FinalRate__c</fullName>
    <label>Final Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>