force-app/main/default/objects/FNS_Pricing__c/fields/FNS_FinalSpread__c.field-meta.xml
<CustomField>
    <fullName>FNS_FinalSpread__c</fullName>
    <label>Final Spread</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>