force-app/main/default/objects/FNS_Pricing__c/fields/FNS_FinancialAccount__c.field-meta.xml
<CustomField>
    <fullName>FNS_FinancialAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Financial Product</description>
    <label>Financial Product</label>
    <referenceTo>FNS_FinancialAccount__c</referenceTo>
    <relationshipLabel>Pricings</relationshipLabel>
    <relationshipName>FinancialProductPricings</relationshipName>
    <type>Lookup</type>
</CustomField>