force-app/main/default/objects/FNS_Pricing__c/fields/FNS_Frequencies__c.field-meta.xml
<CustomField>
    <fullName>FNS_Frequencies__c</fullName>
    <label>Frequencies</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>FNS_Frequency</valueSetName>
    </valueSet>
</CustomField>