force-app/main/default/objects/FNS_Pricing__c/fields/FNS_RateBasis__c.field-meta.xml
<CustomField>
    <fullName>FNS_RateBasis__c</fullName>
    <label>Rate Basis</label>
    <length>255</length>
    <type>Text</type>
</CustomField>