force-app/main/default/objects/FNS_Pricing__c/fields/FNS_RateCeiling__c.field-meta.xml
<CustomField>
    <fullName>FNS_RateCeiling__c</fullName>
    <label>Rate Ceiling</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>