force-app/main/default/objects/FNS_Pricing__c/fields/FNS_RateFloor__c.field-meta.xml
<CustomField>
    <fullName>FNS_RateFloor__c</fullName>
    <label>Rate Floor</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>