force-app/main/default/objects/FNS_Pricing__c/fields/FNS_RateIndex__c.field-meta.xml
<CustomField>
    <fullName>FNS_RateIndex__c</fullName>
    <label>Rate Index</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>