force-app/main/default/objects/FNS_Pricing__c/fields/FNS_RateType__c.field-meta.xml
<CustomField>
    <fullName>FNS_RateType__c</fullName>
    <label>Rate Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>F</fullName>
                <label>Fixed</label>
            </value>
            <value>
                <fullName>V</fullName>
                <label>Variable</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>