force-app/main/default/objects/FNS_Pricing__c/fields/FNS_Spread__c.field-meta.xml
<CustomField>
    <fullName>FNS_Spread__c</fullName>
    <label>Spread</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>