force-app/main/default/objects/FNS_Pricing__c/recordTypes/FNS_Pricing.recordType-meta.xml
<RecordType>
    <fullName>FNS_Pricing</fullName>
    <active>true</active>
    <label>Pricing</label>
</RecordType>