force-app/main/default/objects/FNS_Pricing__c/recordTypes/FNS_PricingReadOnly.recordType-meta.xml
<RecordType>
    <fullName>FNS_PricingReadOnly</fullName>
    <active>true</active>
    <label>Pricing Read Only</label>
</RecordType>