force-app/main/default/objects/FNS_Pricing__c/listViews/FNS_Pricings.listView-meta.xml
<ListView>
    <fullName>FNS_Pricings</fullName>
    <columns>NAME</columns>
    <columns>FNS_BaseRate__c</columns>
    <columns>FNS_CalcType__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>Pricings</label>
</ListView>